# backend

./: .gitignore  .pdm-python  Dockerfile  Makefile  README.md  docker-compose.yml  ipython.py  main.py  pyproject.toml
src/backend/: ChatRoutes.py  HRRoutes.py  JobRoutes.py  Models.py  StudentRoutes.py  app.py  constants.py  mongo.py  ragutils.py  utils.py
tests/: test_routes.py
