[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jayden Pyles", email = "jpylesbuisness@gmail.com"},
]
dependencies = [
    "annotated-types==0.6.0",
    "anyio==4.3.0",
    "bcrypt>=4.1.2",
    "click==8.1.7",
    "exceptiongroup==1.2.0",
    "fastapi>=0.110.2",
    "fitz>=0.0.1.dev2",
    "h11==0.14.0",
    "httptools==0.6.1",
    "idna==3.6",
    "jwt>=1.3.1",
    "openai>=1.13.3",
    "pdfplumber>=0.10.4",
    "pymongo>=4.6.3",
    "pydantic==2.6.4",
    "pydantic-core==2.16.3",
    "pyjwt>=2.8.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "PyMuPDF>=1.23.26",
    "PyPDF2>=3.0.1",
    "PyYAML==6.0.1",
    "reportlab>=4.1.0",
    "requests>=2.31.0",
    "sniffio==1.3.1",
    "starlette==0.37.2",
    "typing-extensions==4.10.0",
    "uvicorn==0.29.0",
    "uvloop==0.19.0",
    "watchfiles==0.21.0",
    "websockets==12.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
